--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <td>하절기</td>
         </tr>
     </table>
-    <img src="/images/tomato_1.png" alt="방울 토마토 그림" width="100">
+    <img src="images/tomato_1.png" alt="방울 토마토 그림" width="100">
     <hr>
     <h2><a href="#content5">Top으로 이동</a></h2>
 </body>
