--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <hr>
     <h2 id="content3">주문하기</h2>
     방울 토마토는 <b><u>3kg에 2만원</u></b>입니다. 주문하시려면 아래 링크를 클릭해주세요.
+    <p></p><button>주문하기</button>
     <hr>
     <h2 id="content4">상품정보</h2>
     <table border="1">
